# api

./: .gitignore  Cargo.toml  README.md  compose.yaml  config.yml  justfile  rustfmt.toml
.cargo/: config.toml
.sqlx/: query-0ebeed303b3f1595d3529657814aebc26041cab8722382831559c008c5c290f9.json  query-1f5984e50415b31b1dffbb64d80cb2dca3355de82bea6cf9cf722cf8f10ab66d.json  query-46b9268a68ad10162faaa0780748aa399e397b6fc2d144ee579ad78879cf9c54.json  query-513b5c27f4057204416c3f91da7160369d189c0518372c0bf9ef3298229fe792.json  query-56ebbe615de5837d872239d5ff43698a99ccd117c3b5dfef296a538cf32ca147.json  query-64f3b0636929e5ade2c2e9fd69c8f7b489edfb0a22727f648d6d7f0ba1092a49.json  query-66f206f16264e418ccf3d8767e429af844e2d573041fd9566d47bd168de82bba.json  query-7a0eec284fcc4c0a51c0d942d185e4667247895ef2e821ecab874d9fb981a008.json  query-7d7b2e110d67dab073acf42900b29eec5dad575553249ec00677d8142e16f61d.json  query-822f0e14e6c75d2b157c930e74b22b5a8ea9399cd4b22271b4c6e10eb217a310.json  query-abbc5080ec33dbb0fa0236514e62e462b4be45afa94fa5191aaa419da881cc35.json  query-c3c44fda1726597a7e9e1c515ddbc621e439094213e05ee6ceb83f59db6ff9bc.json  query-cffd24aa11be01fb68d8e3ef82bf5b76fbbb9c561b36d2d90550f7e10922a3d3.json  query-e71d7e192548d1dc960edd4037e6cbb6334d3a2c76f7936454c4ddf9e261e27e.json  query-eb3ee777b5a7376c5075728c8ecbe51a060f81126674c3e120ca2b70cca8dcf3.json
orbit/: Cargo.toml
orbit/src/: auth.rs  db.rs  error.rs  main.rs
orbit/src/routes/: admin.rs  colors.rs  emotes.rs  mod.rs  sets.rs  users.rs
orbit_derive/: Cargo.toml
orbit_derive/src/: from_row.rs
orbit_image/: Cargo.toml
orbit_macros/: Cargo.toml
orbit_macros/src/: from_jsonb.rs  from_row.rs  lib.rs
orbit_seed/: Cargo.toml
orbit_seed/src/: main.rs
orbit_types/: Cargo.toml
orbit_types/src/: lib.rs  snowflake.rs
orbit_types/src/models/: emote.rs  mod.rs  set.rs  user.rs
src/: auth.rs  error.rs  main.rs
src/routes/: auth.rs  channels.rs  emotes.rs  mod.rs  sets.rs  users.rs
