[workspace]
members = ["orbit", "orbit_macros", "orbit_seed", "orbit_types"]
resolver = "2"

[workspace.dependencies]
orbit_macros.path = "orbit_macros"
orbit_types.path = "orbit_types"

postgres-types = { version = "0.2.6", features = ["derive"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
tokio-postgres = "0.7.10"
