[package]
name = "orbit"
version = "0.1.0"
edition = "2021"

[dependencies]
orbit_macros.workspace = true
orbit_types.workspace = true

postgres-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = ["with-serde_json-1"] }

aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.11.0"
axum = { version = "0.7.2", features = ["macros", "multipart"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
dotenvy = "0.15.7"
meilisearch-sdk = "0.24.3"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = { version = "0.35.0", default-features = false }
shuttle-secrets = "0.35.2"
thiserror = "1.0.52"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
